<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:orderInCategory="1"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:orderInCategory="2"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_conversations"
            android:icon="@drawable/ic_menu_conversations"
            android:orderInCategory="3"
            android:title="@string/menu_conversations" />
        <item
            android:id="@+id/nav_my_flat"
            android:icon="@drawable/ic_menu_my_flat"
            android:orderInCategory="4"
            android:title="@string/menu_my_flat" />
        <item
            android:id="@+id/nav_amenity"
            android:icon="@drawable/ic_menu_amenity"
            android:orderInCategory="5"
            android:title="@string/menu_request_amenity" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_menu_documents"
            android:orderInCategory="6"
            android:title="@string/menu_documents" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:orderInCategory="7"
            android:title="@string/menu_photo_gallery" />
        <item
            android:id="@+id/nav_notice_board"
            android:icon="@drawable/ic_menu_notice_board"
            android:orderInCategory="8"
            android:title="@string/menu_notice_board" />
        <item
            android:id="@+id/nav_society_events"
            android:icon="@drawable/ic_menu_society_events"
            android:orderInCategory="9"
            android:title="@string/menu_society_events" />
        <item
            android:id="@+id/nav_official_communication"
            android:icon="@drawable/ic_menu_communication"
            android:orderInCategory="10"
            android:title="@string/menu_official_communication" />
        <item
            android:id="@+id/nav_payment_details"
            android:icon="@drawable/ic__menu_payment_details"
            android:orderInCategory="11"
            android:title="@string/menu_payment_details" />
        <item
            android:id="@+id/nav_vendor_management"
            android:icon="@drawable/ic_menu_vendor"
            android:orderInCategory="12"
            android:title="@string/menu_vendor_management" />
        <item
            android:id="@+id/nav_staff_management"
            android:icon="@drawable/ic_menu_staff"
            android:orderInCategory="13"
            android:title="@string/menu_staff_management" />

        <item
            android:id="@+id/nav_features"
            android:icon="@drawable/ic_menu_features"
            android:orderInCategory="14"
            android:title="@string/menu_features" />

        <item
            android:id="@+id/nav_bye_laws"
            android:icon="@drawable/ic_menu_bye_laws"
            android:orderInCategory="15"
            android:title="@string/menu_bye_laws" />
    </group>
</menu>
