<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_post_reply_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_et_reply_comment"
        android:hint="@string/prompt_comment"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/btn_post_reply"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/action_conversation_reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_post_reply_comment" />

    <Button
        android:id="@+id/btn_post_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_cancel"
        app:layout_constraintStart_toEndOf="@+id/btn_post_reply"
        app:layout_constraintTop_toBottomOf="@+id/et_post_reply_comment" />
</androidx.constraintlayout.widget.ConstraintLayout>